[tool.poetry]
name = "BeautifulPrint"
version = "1.0"
description = "This module can colorizing any text in your terminal"
authors = ["tankalxat34"]
readme = "README.md"
homepage = "https://github.com/tankalxat34/BeautifulPrint"
repository = "https://github.com/tankalxat34/BeautifulPrint"


[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
