[tool.poetry]
name = "PaintPrint"
version = "1.0.4"
description = "This module can colorize any text in your terminal"
authors = ["tankalxat34 <tankalxat34@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/tankalxat34/PaintPrint"
repository = "https://github.com/tankalxat34/PaintPrint"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
